force-app/main/default/objects/pcldm__Pattern__c/pcldm__Pattern__c.object-meta.xml
<CustomObject>
    <label>Pattern</label>
    <nameField>
        <label>Pattern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>