force-app/main/default/objects/pcldm__Pattern__c/fields/pcldm__Preview__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Preview__c</fullName>
    <label>Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>