force-app/main/default/objects/pcldm__Pattern__c/fields/pcldm__Type__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom List</fullName>
            </value>
            <value>
                <fullName>Regex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>