force-app/main/default/objects/pcldm__Pattern__c/fields/pcldm__Value__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Value__c</fullName>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>