force-app/main/default/objects/pcldm__Pattern__c/recordTypes/pcldm__List.recordType-meta.xml
<RecordType>
    <fullName>pcldm__List</fullName>
    <active>true</active>
    <label>List</label>
</RecordType>