force-app/main/default/objects/pcldm__Pattern__c/recordTypes/pcldm__Regex.recordType-meta.xml
<RecordType>
    <fullName>pcldm__Regex</fullName>
    <active>true</active>
    <label>Regex</label>
</RecordType>