force-app/main/default/objects/pcldm__Pattern__c/listViews/pcldm__All.listView-meta.xml
<ListView>
    <fullName>pcldm__All</fullName>
    <columns>NAME</columns>
    <columns>pcldm__Data_Type__c</columns>
    <columns>pcldm__Type__c</columns>
    <columns>pcldm__Value__c</columns>
    <columns>pcldm__Preview__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>